<resources>
    <string name="app_name">Study Session</string>
    <string-array name="schools_array">
        <item>Northwest Missouri State University</item>
        <item>Missouri Western State University</item>
        <item>University of Missouri</item>
        <item>University of Missouri–Kansas City</item>
        <item>Missouri University of Science and Technology</item>
        <item>University of Missouri–St. Louis</item>
        <item>Missouri State University</item>
        <item>Southeast Missouri State University</item>
        <item>University of Central Missouri</item>
    </string-array>
    <string-array name="days_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="empty_username">Please enter a username</string>
    <string name="empty_fields">Please complete all fields</string>
    <string name="empty_school">Please select a school</string>
    <string name="added_time">Successfully added time</string>
    <string name="no_time">Please add a time you are available</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_password">Password must be >10 characters and contain a number, a special character, lowercase and an uppercase letter</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Don\'t have an account? Sign up!</string>
    <string name="field_empty">Field empty</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="groups">Groups:</string>
    <string name="school">School:</string>
    <string name="times">Times:</string>
    <string name="emailLabel">Email:</string>
    <string name="remember_me">Remember Me?</string>
    <string name="university">University</string>
    <string name="day_of_the_week">Day of the Week</string>
    <string name="add_time">Add Time</string>
    <string name="username">Username</string>
</resources>
